--- a/Proyecto 02/src/main/webapp/views/master-page/messages.properties
+++ b/Proyecto 02/src/main/webapp/views/master-page/messages.properties
@@ -10,9 +10,13 @@ master.page.administrator			= Administrator
 master.page.administrator.action.1	= Action 1
 master.page.administrator.action.2	= Action 2
 
-master.page.customer				= Customer
-master.page.customer.action.1		= Action 1
-master.page.customer.action.2		= Action 2
+master.page.customer				= Client services
+master.page.customer.action.1		= General services
+master.page.customer.action.2		= Repairs
+master.page.customer.action.3		= Instalations
+master.page.customer.action.4		= Outdoor services
+master.page.customer.action.5		= Indoor services
+
 
 master.page.profile 				= Profile
 master.page.profile.action.1 		= Action 1
