--- a/Proyecto 02/src/main/webapp/views/master-page/messages_es.properties
+++ b/Proyecto 02/src/main/webapp/views/master-page/messages_es.properties
@@ -10,9 +10,13 @@ master.page.administrator			= Administrador
 master.page.administrator.action.1	= Acción 1
 master.page.administrator.action.2	= Acción 2
 
-master.page.customer				= Cliente
-master.page.customer.action.1		= Acción 1
-master.page.customer.action.2		= Acción 2
+master.page.customer				= Servicios para el cliente
+master.page.customer.action.1		= Servicios generales
+master.page.customer.action.2		= Reparaciones
+master.page.customer.action.3		= Instalaciones
+master.page.customer.action.4		= Servicios de exterior
+master.page.customer.action.5		= Servicios de interior
+
 
 master.page.profile 				= Perfil
 master.page.profile.action.1 		= Acción 1
